modules/gdscript/tests/scripts/parser/errors/oninstantiated_with_onready.gd
extends Node

@onready @oninstantiated var node

func test():
	pass
